--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,7 @@
 <header>
   <div class="container">
       <a href="/">
-        <img src="https://avatars3.githubusercontent.com/u/428948?s=460&v=4">
-        <span>tech@fiiv</span>
+        <img src="/assets/images/80days.svg">
       </a>
   </div>
 </header>
