--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,7 @@
 ---
 layout: default
 ---
-<div class="masthead angle--bottom-left">
-  <img src="/assets/images/istanbul.jpg" alt="Nebula" class="angle__content">
+<div class="masthead angle--bottom-left with-background" style="background-image: url(/assets/images/hcm.jpg);">
 </div>
 
 <div class="container">
