--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,9 +8,8 @@
 
     <ul id="menu">
       <a href="/"><li>Home</li></a>
-      <a href="#"><li>About</li></a>
-      <a href="#"><li>Info</li></a>
-      <a href="#"><li>Contact</li></a>
+      <a href="/travel"><li>80 days: travel</li></a>
+      <a href="/tech"><li>80 days: tech</li></a>
     </ul>
   </div>
 </nav>
