--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,4 @@
 ---
 layout: default
 ---
-<div class="masthead angle--bottom-left">
-  <img src="{{ page.masthead }}" alt="Nebula" class="angle__content">
-</div>
+{{content}}
