--- a/_sass/burger.scss
+++ b/_sass/burger.scss
@@ -29,7 +29,7 @@ nav {
   {
     display: block;
     position: relative;
-    top: 50px;
+    top: 20px;
     left: 50px;
 
     z-index: 1;
@@ -66,7 +66,7 @@ nav {
     margin-bottom: 5px;
     position: relative;
 
-    background: #cdcdcd;
+    background: white;
     border-radius: 3px;
 
     z-index: 1;
