--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -33,33 +33,10 @@ header {
 
   a {
     &:hover { text-decoration: none; }
-
-    // img {
-    //   border-radius: 50%;
-    //   border: 3px solid white;
-    //   width: 60px;
-    //   height: 60px;
-    //   position: relative;
-    //   top: 7px;
-    //   box-shadow: 0 2px 3px rgba(10,10,10,0.1), 0 0 0 1px rgba(10,10,10,0.1);
-    //   z-index: 2;
-    // }
+    float: right;
 
     img {
       width: 150px;
-    }
-
-    span {
-      background: rgba(black, 0.4);
-      color: white !important;
-      font-size: 170%;
-      font-weight: bold;
-      position: relative;
-      top: -13px;
-      left: -35px;
-      padding: 0 25px 5px 45px;
-      z-index: 1;
-      border-radius: 20px;
     }
   }
 }
@@ -119,13 +96,46 @@ article {
 }
 
 aside.about-widget {
+  width: 100%;
+  margin: 150px 0;
+  background: $highlight-color;
+  color: white;
+  padding: 0 0 100px 0;
 
+  a, a:visited {
+    color: white;
+    font-weight: bold;
+  }
+
+  .lead-image {
+    position: relative;
+    top: -60px;
+    margin: 0 auto -60px auto;
+    width: 120px;
+
+    img {
+      border-radius: 50%;
+      border: 4px solid white;
+      width: 120px;
+      height: 120px;
+      box-shadow: 0 2px 3px rgba(10,10,10,0.1), 0 0 0 1px rgba(10,10,10,0.1);
+    }
+  }
+
+  .content {
+    padding: 0 20px;
+
+    .highlight {
+      font-weight: bold;
+      background: inherit;
+      color: inherit;
+    }
+  }
 }
 
 footer {
-  background-color: $highlight-color;
+  background-color: white;
   height: 200px;
-  color: white;
   padding-top: 100px;
   margin-top: 100px;
 }
