--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,15 @@
 
     <footer>
       <div class="container">
-
+        <p class="contact-links">
+          <a href="https://github.com/mtimofiiv">Github</a>
+           |
+          <a href="https://twitter.com/mtimofiiv">Twitter</a>
+           |
+          <a href="https://www.linkedin.com/in/mtimofiiv/">Linkedin</a>
+           |
+          <a href="mailto:contact@80days.in">contact@80days.in</a>
+        </p>
       </div>
     </footer>
 
