--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,13 +2,10 @@
 layout: default
 ---
 <article class="container">
+  <p class="date">{{ page.date | date: "%b %-d, %Y" }}</p>
   <h1>{{ page.title }}</h1>
-  {{ page.content }}
 
-  <ul class="tags">
-    {% for tag in page.tags %}
-      <li><a href="/tags/{{tag}}">{{tag}}</a></li>
-    {% endfor %}
-  </ul>
+
+  {{ page.content }}
 
 </article>
