--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,16 @@
     <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:creator" content="@mtimofiiv">
+
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:title" content="{% if page.title %}{{page.title}}{% else %}80 Days{% endif %}">
+    <meta property="og:url" content="{{site.url}}{{page.url}}">
+    <meta property="og:image" content="{% if page.share_image %}{{page.share_image}}{% else %}{{site.url}}/assets/images/hcm-share.jpg{% endif %}">
+    <meta property="og:description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
   </head>
   <body class="{{ page.layout }}">
 
