--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
     <meta property="og:image:width" content="1200">
     <meta property="og:title" content="{% if page.title %}{{page.title}}{% else %}80 Days{% endif %}">
     <meta property="og:url" content="{{site.url}}{{page.url}}">
-    <meta property="og:image" content="{% if page.share_image %}{{page.share_image}}{% else %}{{site.url}}/assets/images/hcm-share.jpg{% endif %}">
+    <meta property="og:image" content="{{site.url}}{% if page.share_image %}{{page.share_image}}{% else %}/assets/images/hcm-share.jpg{% endif %}">
     <meta property="og:description" content="{% if page.description %}{{page.description}}{% else %}{{site.description}}{% endif %}">
   </head>
   <body class="{{ page.layout }}">
