adding embed code for email list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,8 +35,9 @@
 
     {{ content }}
 
-    {% include about.html %}
+    {% include blogsend.html %}
 
+    {% include about.html %}
 
     <footer>
       <div class="container">
