--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -145,6 +145,13 @@ article {
   }
 }
 
+aside.subscribe-to-list {
+  border: 1px solid lighten($highlight-color, 30%);
+  margin: 60px 0;
+
+  h2 { text-align: center; }
+}
+
 aside.about-widget {
   width: 100%;
   margin: 150px 0 0 0;
