--- a/_includes/blogsend.html
+++ b/_includes/blogsend.html
@@ -4,8 +4,8 @@
     <iframe
       name="blogsend"
       id="blogsend"
-      src="https://blogsend.io/s/f0f8a3b1-946a-4c49-a894-647e69c47d9a/iframe?accent=db5855&button_text=ffffff"
-      style="width: 100%; height: 154px;"
+      src="https://blogsend.io/s/f0f8a3b1-946a-4c49-a894-647e69c47d9a/iframe"
+      style="width: 100%; height: 111px;"
       marginheight="0"
       marginwidth="0"
       scrolling="no"
