--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,9 @@
     <div class="content">
       <h2>About the author</h2>
       <p>
-        I (<a href="https://fiiv.io">@fiiv</a>) am a digital nomad and a web developer, currently in <span class="highlight">{{ site.mike_location }}</span>.
+        I (<a href="https://fiiv.io">@fiiv</a>) am a digital nomad and a web developer, currently in&nbsp;
+        {% if site.mike_location_flag %}<span class="where-flag">{{site.mike_location_flag}}</span>&nbsp;{%endif%}
+        <span class="highlight">{{ site.mike_location }}</span>.
       </p>
       <p>
         If you want to talk about travel, tech, code, your project, or anything else under the sun, let's grab a ☕️  or 🍺 or anything else.
