--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -89,19 +89,27 @@ header {
 }
 
 article {
-  padding-left: 25px;
-  border-left: lighten($highlight-color, 38%) solid 3px;
-
   h1 {
     padding: 0;
     margin: 0;
     font-size: 190%;
+    color: $highlight-color;
+
   }
 
   .date {
     color: lighten($base-font-color, 20%);
     font-weight: bold;
     margin-bottom: 0;
+  }
+
+  img {
+    max-width: 90%;
+    margin: 0 auto;
+    display: block;
+    border-radius: 4px;
+    box-shadow: 0 2px 3px rgba(10,10,10,0.1), 0 0 0 1px rgba(10,10,10,0.1);
+    border: 10px solid white;
   }
 }
 
@@ -186,6 +194,18 @@ aside.about-widget {
       font-weight: bold;
       background: inherit;
       color: inherit;
+    }
+
+    .where-flag {
+      border-radius: 50%;
+      background: lighten($highlight-color, 30%);
+      width: 1.5em;
+      height: 1.5em;
+      font-size: 1em;
+      display: inline-block;
+      text-align: center;
+      position: relative;
+      top: 2px;
     }
   }
 }
