--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       <h2>About the author</h2>
       <p>
         I (<a href="https://fiiv.io">@fiiv</a>) am a digital nomad and a web developer, currently in&nbsp;
-        {% if site.mike_location_flag %}<span class="where-flag">{{site.mike_location_flag}}</span>&nbsp;{%endif%}
+        {% if site.mike_location_flag %}{{site.mike_location_flag}}&nbsp;{%endif%}
         <span class="highlight">{{ site.mike_location }}</span>.
       </p>
       <p>
