--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
     </footer>
 
     <script src="/assets/script.js"></script>
-    <script async src="https://cdn.simpleanalytics.io/hello.js"></script>
-    <noscript><img src="https://api.simpleanalytics.io/hello.gif" alt=""></noscript>
+    <script async defer src="https://visit.80days.in/app.js"></script>
+    <noscript><img src="https://visit.80days.in/image.gif" alt=""></noscript>
   </body>
 </html>
