--- a/_includes/blogsend.html
+++ b/_includes/blogsend.html
@@ -4,7 +4,7 @@
     <iframe
       name="blogsend"
       id="blogsend"
-      src="https://blogsend.io/s/f0f8a3b1-946a-4c49-a894-647e69c47d9a/iframe"
+      src="https://blogsend.io/s/f0f8a3b1-946a-4c49-a894-647e69c47d9a/iframe?button_bg_color=db5855&amp;button_text_color=ffffff&amp;button_border_color=db5855"
       style="width: 100%; height: 111px;"
       marginheight="0"
       marginwidth="0"
