--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -258,7 +258,7 @@ ul.photo-array {
 }
 
 .lightbox {
-  & > a {
+  & > a.photo {
     position: fixed;
     z-index: 100;
     background-color: #00000070;
@@ -287,7 +287,7 @@ ul.photo-array {
       max-width: 90%;
     }
 
-    span {
+    span.caption {
       background-color: #00000070;
       padding: 1px 14px 4px 14px;
       border-radius: 20px;
