adding pjax + nprogress for better inter-site nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,10 @@
       </div>
     </footer>
 
+    <script src="/assets/nprogress.min.js"></script>
+    <script src="/assets/pjax.min.js"></script>
     <script src="/assets/script.js"></script>
+
     <script async defer src="https://visit.80days.in/app.js"></script>
     <noscript><img src="https://visit.80days.in/image.gif" alt=""></noscript>
   </body>
