adding my coronavirus post

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,12 +7,12 @@
     <div class="content">
       <h2>About the author</h2>
       <p>
-        I (<a href="https://fiiv.io">@fiiv</a>) am a digital nomad and a web developer, currently in&nbsp;
+        I (<a href="https://fiiv.io">@fiiv</a>) am a digital nomad, writer and a web developer, currently in&nbsp;
         {% if site.mike_location_flag %}{{site.mike_location_flag}}&nbsp;{%endif%}
-        <span class="highlight">{{ site.mike_location }}</span>.
+        <span class="highlight">{{site.mike_location}}</span>.
       </p>
       <p>
-        If you want to talk about travel, tech, code, your project, or anything else under the sun, let's grab a ☕️  or 🍺 or anything else.
+        I love to write – and what's more, I'd love to write for you. <a href="/hire">Want to hire me?</a>
       </p>
     </div>
   </div>
