--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,9 +7,13 @@
     <span></span>
 
     <ul id="menu">
-      <a href="/"><li>Home</li></a>
-      <a href="/travel/"><li>80 days: travel</li></a>
-      <a href="/tech/"><li>80 days: tech</li></a>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about">About this blog</a></li>
+
+      <li><a href="/travel/">80 days: travel</a></li>
+      <li><a href="/tech/">80 days: tech</a></li>
+
+      <li><a href="/hire">Looking for a writer?</a></li>
     </ul>
   </div>
 </nav>
