--- a/_layouts/blogroll.html
+++ b/_layouts/blogroll.html
@@ -19,7 +19,7 @@ layout: default
       <div class="post">
         <p class="date">{{ post.date | date: "%b %-d, %Y" }}</p>
         <h2><a href="{{post.url}}">{{post.title}}</a></h2>
-        {{ post.excerpt }}
+        <p>{{ post.excerpt }}</p>
       </div>
     {% endfor %}
   </section>
