--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -7,6 +7,7 @@ $base-font-family: 'Clear Sans';
 $base-font-size: 1.2em;
 
 $highlight-color: #db5855;
+$fade: #f7f7f7;
 
 @import 'normalize';
 @import 'fonts';
