--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
         <span class="highlight">{{site.mike_location}}</span>.
       </p>
       <p>
-        I love to write – and what's more, I'd love to write for you. <a href="/hire">Want to hire me?</a>
+        I love to write – and what's more, I'd love to write for you. <a href="/hire/">Want to hire me?</a>
       </p>
     </div>
   </div>
