--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -13,7 +13,7 @@
       <li><a href="/travel/">80 days: travel</a></li>
       <li><a href="/tech/">80 days: tech</a></li>
 
-      <li><a href="/hire">Looking for a writer?</a></li>
+      <li><a href="/hire/">Looking for a writer?</a></li>
     </ul>
   </div>
 </nav>
