--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,6 +50,8 @@
            |
           <a href="https://www.linkedin.com/in/mtimofiiv/">Linkedin</a>
            |
+          <a rel="me" href="https://anticapitalist.party/@fiiv">Mastodon</a>
+           |
           <a href="mailto:contact@80days.in">contact@80days.in</a>
         </p>
       </div>
